load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gin",
    srcs = [
        "app_router.go",
        "init.go",
        "private_workbook_handler.go",
        "workbook_handler.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-core/src/controller/gin",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-core/src/controller/gin/helper",
        "//cocotola-core/src/controller/gin/middleware",
        "//cocotola-core/src/domain/workbookfind",
        "//cocotola-core/src/service",
        "//cocotola-core/src/usecase/student",
        "//lib/config",
        "//lib/controller/gin/middleware",
        "//lib/log",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_kujilabo_redstart//lib/domain",
        "@com_github_kujilabo_redstart//lib/log",
        "@com_github_kujilabo_redstart//user/domain",
        "@com_github_samber_slog_gin//:slog-gin",
        "@io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin//:otelgin",
    ],
)
