load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gin",
    srcs = [
        "app_router.go",
        "init.go",
        "workbook_handler.go",
    ],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-core/src/controller/gin",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-core/src/controller/gin/helper",
        "//cocotola-core/src/domain",
        "//cocotola-core/src/service",
        "//lib/api",
        "//lib/config",
        "//lib/controller/gin/middleware",
        "//lib/log",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_kujilabo_redstart//lib/domain",
        "@com_github_kujilabo_redstart//lib/errors",
        "@com_github_kujilabo_redstart//lib/log",
        "@com_github_samber_slog_gin//:slog-gin",
        "@io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin//:otelgin",
    ],
)

go_test(
    name = "gin_test",
    srcs = [
        "helper_test.go",
        "workbook_handler_s_test.go",
    ],
    deps = [
        ":gin",
        "//cocotola-core/src/config",
        "//cocotola-core/src/controller/gin/middleware",
        "//cocotola-core/src/controller/gin/mocks",
        "//cocotola-core/src/service",
        "//cocotola-core/src/service/mocks",
        "//lib/api",
        "//lib/config",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_ohler55_ojg//jp",
        "@com_github_ohler55_ojg//oj",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "gin_s_test",
    size = "small",
    srcs = [
        "helper_test.go",
        "workbook_handler_s_test.go",
    ],
    gotags = ["small"],
    deps = [
        ":gin",
        "//cocotola-core/src/config",
        "//cocotola-core/src/controller/gin/middleware",
        "//cocotola-core/src/controller/gin/mocks",
        "//cocotola-core/src/service",
        "//cocotola-core/src/service/mocks",
        "//cocotola-core/src/usecase/student",
        "//lib/api",
        "//lib/config",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_kujilabo_redstart//user/domain",
        "@com_github_ohler55_ojg//jp",
        "@com_github_ohler55_ojg//oj",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
