load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = ["CocotolaAuthClient.go"],
    importpath = "github.com/kujilabo/cocotola-1.21/cocotola-core/src/service/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/api",
        "@com_github_stretchr_testify//mock",
    ],
)
